--- a/ATIVIDADES/atividades.html
+++ b/ATIVIDADES/atividades.html
@@ -11,6 +11,6 @@
     <a href="./exercicio-01.html">EXERCICIO-01</a>
     <a href="./exercicio-02.html">EXERCICIO-02</a>
     <a href="./exercicio-03.html">EXERCICIO-03</a>
-    <a href="./exe05-receitas/index.html">Exercicio 05</a>
+    <a href="../ATIVIDADES/exe05-receitas/index.html">Exercicio 05 - Receitas</a>
 </body>
 </html>
