--- a/ATIVIDADES/atividades.html
+++ b/ATIVIDADES/atividades.html
@@ -8,9 +8,9 @@
 <body>
     <h1> Atividades desenvolvidas</h1>
     
-    <a href="./exercicio-01.html">EXERCICIO-01</a>
-    <a href="./exercicio-02.html">EXERCICIO-02</a>
-    <a href="./exercicio-03.html">EXERCICIO-03</a>
+    <a href="../ATIVIDADES/exercicio-01.html">EXERCICIO-01</a>
+    <a href="../ATIVIDADES/exercicio-02.html">EXERCICIO-02</a>
+    <a href="../ATIVIDADES/exercicio-03.html">EXERCICIO-03</a>
     <a href="../ATIVIDADES/exe05-receitas/index.html">Exercicio 05 - Receitas</a>
 </body>
 </html>
