--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-    <a href="atividades/atividades.html">Atividades</a>
-    <a href="teoria.html">teoria</a>
+    <a href="./atividades/atividades.html">Atividades</a>
+    <a href="./teoria.html">teoria</a>
 </body>
 </html>
