--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <img src="" alt="">
     <img src="./IMG/sesi-logo.jpg"><p>
 
-
-
-
-    <a href="./atividades/atividades.html">Atividades</a>
+    <a href="./ATIVIDADES/atividades.html">Atividades</a>
     <a href="./teoria.html">teoria</a>
 </body>
 </html>
