--- a/teoria.html
+++ b/teoria.html
@@ -4,35 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
-
-    <style>
-        /* Seletor universal*/
-        *{
-            margin: 0;
-        }
-        /* Seletor de tipo, aplicando uma tag especifica*/
-        p{
-            color:rgb(10, 246, 116);
-        }
-
-        /* seletor de classe */
-        .paragrafo{
-            background-color: rgb(198, 104, 37);
-            /* margin: 10px 40px;  aplica em todas as margens*/
-            /* margin: 10px 40px;  aplica as margens laterais e superior e inferior*/
-            /*margin: 10px 20px 30px 40px;  aplica margem top, right, bottom, left*/
-            margin-left: 10px;
-            text-align: center;
-        }
-
-        .imagem{
-            width: 150px;
-            height: 100px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="./CSS/styles.css">
+    
 </head>
-<body style="background-color: rgb(156, 251, 219);">
+<body >
     Olá mundo!😎
     <!-- Titulo de nivel 1 ao 6-->
     <h1>Desenvolvimento de sistemas</h1>
@@ -166,6 +141,77 @@
         <dd>Linguagem de programação</dd>
         <br>
     </dl>
+
+<!--trabalhando com tabelas-->
+<br>
+<hr>
+
+<!--cria uma nova tabela -->
+<table border="1">
+    <tr> <!-- tr cria uma nova linha -->
+        <th>nome</th> <!-- th insere uma célula de cabeçalho -->
+        <th>idade</th>
+        <th>Profissão</th>
+    </tr>
+    <tr>
+        <td>Douglas</td> <!-- td cria uma nova célula de dados-->
+        <td>32</td>
+        <td>Professor</td>
+    </tr>
+    <tr>
+        <td>Ricardo</td>
+        <td>33</td>
+        <td>Professor</td>
+    </tr>
+
+</table>
+<br>
+<table class="tabela">
+       <!--tag semantica de cabeçalho-->
+    <thead>
+        <tr class="">
+            <th class="cabecalho cabecalho2 ">Nome</th>
+            <th class="cabecalho cabecalho3">Telefone</th>
+            <th class="cabecalho cabecalho2">Cidade</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="celula">Jose da Silva</td>
+            <td class="celula">2345678</td>
+            <td class="celula">Andradina</td>
+        </tr>
+        <tr>
+            <td class="celula">Maria da Silva</td>
+            <td class="celula">2345678</td>
+            <td class="celula">Andradina</td>
+        </tr>
+    </tbody>
+</table>
+
+<!--aplicando um rowspan e colspan-->
+<table border="1">
+    <tr>
+        <th>Nome</th>
+        <th colspan="2">Telefone</th>
+    </tr>
+    <tr>
+        <td>Ricardo</td>
+        <td>1988888888</td>
+        <td>1899977777</td>
+    </tr>
+    <tr>
+        <td rowspan="2">Joaquim</td>
+        <td>123432</td>
+        <td>123432</td>
+    </tr>
+    <tr>
+       
+        <td>1988888888</td>
+        <td>1899977777</td>
+    </tr>
+</table>
+
 
 </body>
 </html>
