atualizações e novas atividades

--- a/ATIVIDADES/Exe07.html
+++ b/ATIVIDADES/Exe07.html
@@ -4,57 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tabela 2</title>
+    <link rel="stylesheet" href="../CSS/exe07.css">
 </head>
 <body>
-    <h1>Análise de computadores</h1>
+    <h1 class="tabelaexe06">Análise de computadores</h1>
     <table class="tabelaexe06">
         <tr class="celulaexe06">
-            <th>marca</th>
-            <th>processador</th>
-            <th>memoria ram</th>
-            <th>armazenamento</th>
-            <th>preço</th>
-            <th>tela</th>
+            <th>Marca</th>
+            <th>Processador</th>
+            <th>Memoria ram</th>
+            <th>Armazenamento</th>
+            <th>Preço</th>
+            <th>Tela</th>
+            <th>Sistema Operacional</th>
+            <th>Modelo</th>
+            <th>Comprar</th>
         </tr>
-        <tr class="celulaexe06">
+        <tr class="cabecalho">
             <td>Pichau</td>
             <td> AMD Ryzen 5 5600GT</td>
             <td>16GB DDR4</td>
             <td>SSD 480GB</td>
             <td>R$ 3.299,99</td>
             <td>Monitor 24 polegadas</td> 
+            <td>Windows 10 pro</td> 
+            <td>PC Gamer Completo Pichau Apolo III</td> 
+            <td><a href="https://www.pichau.com.br/computador-completo-pichau-gamer-apolo-iii-amd-ryzen-5-5600gt-16gb-ddr4-ssd-480gb-cadeira-gamer-monitor-24-kit-perifericos-49504?gad_source=1&gclid=CjwKCAjwl6-3BhBWEiwApN6_ki27yopyj87N1U1sre91SyVC6pYK3E8Z6-S6cGaUgLV_tIZ_zXI-GBoCj4sQAvD_BwE" target="_blank">  CLIQUE PARA MAIS</a></td> 
         </tr>
-        <tr class="celulaexe06">
+        <tr class="cabecalho">
             <td>Dell</td>
-            <td>Core™ i9-13900K</td>
+            <td>Core i9-13900K</td>
             <td>32GB DDR5</td>
             <td>SSD de 1TB </td>
             <td>R$ 12.999,00</td>
             <td>Monitor 24 polegadas</td> 
+            <td>Windows 11 pro</td> 
+            <td>Computador HP Workstation Z2 G9</td> 
+            <td><a href="https://www.magazineluiza.com.br/computador-hp-workstation-z2-g9-intel-core-i9-1tb-ssd-32gb-windows-11-pro-8l170la/p/dd58k44e0g/in/dkcp/?&seller_id=lojaoficialhpbrasil&utm_source=google&utm_medium=cpc&utm_term=76950&utm_campaign=google_eco_per_ven_pla_tc_sor_3p_in-b&utm_content=&partner_id=76950&gclsrc=aw.ds&gclid=CjwKCAjwl6-3BhBWEiwApN6_kn8opBxixXiQlQM8lB3iIeGDWzPUN4xlGLLMb0liiPUuT_r8Ycm_1xoCncgQAvD_BwE" target="_blank">  CLIQUE PARA MAIS</a></td> 
         </tr>
-        <tr class="celulaexe06">
+        <tr class="cabecalho">
             <td>Amazon</td>
             <td>AMD RYZEN 5 5600GT</td>
             <td>16GB DDR4</td>
             <td>SSD 480GB</td>
             <td>R$2.890,00</td>
             <td>Monitor 19.5 polegadas</td> 
+            <td>Windows 10 pro</td> 
+            <td>pc gamer montado Amazon</td> 
+            <td><a href="https://www.amazon.com.br/GAMER-MONTADO-RYZEN-MONITOR-TECLADO/dp/B0BQ9YHR1K/ref=asc_df_B0BQ9YHR1K/?tag=googleshopp00-20&linkCode=df0&hvadid=709884378370&hvpos=&hvnetw=g&hvrand=10410136452818280078&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9100681&hvtargid=pla-1969457250384&psc=1&mcid=d5b3e9db3496376fa96dd7d79ab83a71&gad_source=1" target="_blank">  CLIQUE PARA MAIS</a></td> 
         </tr>
-        <tr class="celulaexe06">
+        <tr class="cabecalho">
             <td>kabum</td>
             <td>Intel Core I5</td>
             <td> 16GB RAM</td>
             <td>SSD 256GB</td>
             <td>R$ 1.304,99</td>
             <td>Monitor 20 polegadas</td> 
+            <td>Windows 10</td> 
+            <td>PC Gamer Completo 3green</td> 
+            <td><a href="https://www.kabum.com.br/produto/509528/pc-gamer-completo-3green-intel-core-i5-16gb-ram-ssd-256gb-windows-10-monitor-20-kit-gamer?utm_id=21434223544&gad_source=1&gclid=CjwKCAjwl6-3BhBWEiwApN6_kvFGsvxkOT3bDsrL-Tn4hW8RBy5qOwaEMC6JBYCIUW4oaUqK977PEhoC8sgQAvD_BwE" target="_blank"> CLIQUE PARA MAIS </a>
+            </td> 
         </tr>
-        <tr class="celulaexe06">
+        <tr class="cabecalho">
             <td>Dell</td>
-            <td> Intel® Core™ i5</td>
+            <td> Intel® Core i5</td>
             <td>Memória de 8GB</td>
             <td>SSD de 512GB</td>
             <td>R$ 4.999,00</td>
             <td>Monitor 23.8 polegadas</td> 
+            <td>Windows 11 home/pro</td> 
+            <td>Inspiron 24 All in One</td> 
+            <td><a href="https://www.dell.com/pt-br/shop/cty/pdp/spd/inspiron-24-5430-aio/brpiahbto5430gtxpw?tfcid=31768715&gacd=9657105-15015-5761040-275878141-0&dgc=ST&cid=71700000112393939&gad_source=1&gclid=CjwKCAjwl6-3BhBWEiwApN6_kjmsHAQYphKeuY5Q9OgGroFcNOPyGoVIGiI7Fp89sOsRz_O0LaUQyxoC-mMQAvD_BwE&gclsrc=aw.ds" target="_blank"> CLIQUE PARA MAIS </a>
+            </td> </td> 
         </tr>
     </table>
 </body>
