--- a/ATIVIDADES/atividades.html
+++ b/ATIVIDADES/atividades.html
@@ -9,8 +9,13 @@
     <h1> Atividades desenvolvidas</h1>
     
     <a href="../ATIVIDADES/exercicio-01.html">EXERCICIO-01</a>
+    <BR>
     <a href="../ATIVIDADES/exercicio-02.html">EXERCICIO-02</a>
-    <a href="../ATIVIDADES/exercicio-03.html">EXERCICIO-03</a>
-    <a href="../ATIVIDADES/exe05-receitas/index.html">Exercicio 05 - Receitas</a>
+    <br>
+    <a href="../ATIVIDADES/exercicio-03.html">EXERCICIO-03</a><br>
+    <a href="../ATIVIDADES/exe05-receitas/index.html">Exercicio 05 - Receitas</a><br>
+    <a href="../ATIVIDADES/Exe06.html">Exercicio 06 </a><br>
+    <a href="../ATIVIDADES/Exe07.html">Exercicio 07 </a><br>
+    <a href="../ATIVIDADES/exe08_formulários/index.html">Exercicio 08 </a>
 </body>
 </html>
