--- a/ATIVIDADES/atividades.html
+++ b/ATIVIDADES/atividades.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividades</title>
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
-<body>
-    <h1> Atividades desenvolvidas</h1>
-    
-    <a href="../ATIVIDADES/exercicio-01.html">EXERCICIO-01</a>
+<body style="text-align: center; background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(193,184,184,1) 51%, rgba(133,133,133,1) 100%);">
+    <h3 style="text-align: center; color: rgb(39, 28, 13);"> Atividades desenvolvidas</h3><BR>
+
+    <form class="fundoatv"><BR>
+    <a href="../ATIVIDADES/exercicio-01.html">EXERCICIO-01</a><BR>
     <BR>
-    <a href="../ATIVIDADES/exercicio-02.html">EXERCICIO-02</a>
+    <a href="../ATIVIDADES/exercicio-02.html">EXERCICIO-02</a><BR>
     <br>
-    <a href="../ATIVIDADES/exercicio-03.html">EXERCICIO-03</a><br>
-    <a href="../ATIVIDADES/exe05-receitas/index.html">Exercicio 05 - Receitas</a><br>
-    <a href="../ATIVIDADES/Exe06.html">Exercicio 06 </a><br>
-    <a href="../ATIVIDADES/Exe07.html">Exercicio 07 </a><br>
-    <a href="../ATIVIDADES/exe08_formulários/index.html">Exercicio 08 </a>
+    <a href="../ATIVIDADES/exercicio-03.html">EXERCICIO-03</a><br><BR>
+    <a href="../ATIVIDADES/exe05-receitas/index.html">EXERCICIO-05 - Receitas</a><br><BR>
+    <a href="../ATIVIDADES/Exe06.html">EXERCICIO-06 </a><br><BR>
+    <a href="../ATIVIDADES/Exe07.html">EXERCICIO-07 </a><br><BR>
+    <a href="../ATIVIDADES/exe08_formulários/index.html">EXERCICIO-08 </a>
+</form>
 </body>
 </html>
