--- a/ATIVIDADES/exe08_formulários/index.html
+++ b/ATIVIDADES/exe08_formulários/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index exercicio08</title>
 </head>
-<body>
-    <h1>Atividade exercicio 08</h1>
-    <h2>Página de formulário</h2>
+<body style="background-color: beige;">
+    <h1 style="text-align: center;border: 2px solid; background-color: antiquewhite; padding: 8px 12px;">Atividade Exercício 08</h1>
+    <h2 style="text-align: center; background-color: bisque; border: 2px solid;">Página de formulário</h2><BR><BR>
 
     
-    <a href="../../index.html">Tela de início</a>
-    <a href="./cad_produto.html">Tela de produtos</a>
-    <a href="./login.html">Tela de login</a>
-    <a href="./cad_usuário.html">Tela de usuário</a>
+    <a href="../../index.html" style="padding: 7px 27px; border: 1px solid #1f1b1b; background-color: aliceblue;">Tela de início</a>
+    <a href="./cad_produto.html" style="padding: 7px 27px; border: 1px solid #1f1b1b; background-color: aliceblue;">Tela de produtos</a>
+    <a href="./login.html" style="padding: 7px 27px; border: 1px solid #1f1b1b; background-color: aliceblue;">Tela de login</a>
+    <a href="./cad_usuário.html" style="padding: 7px 27px; border: 1px solid #1f1b1b; background-color: aliceblue;">Tela de usuário</a>
 
 
     
