--- a/ATIVIDADES/exe08_formulários/cad_produto.html
+++ b/ATIVIDADES/exe08_formulários/cad_produto.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Produtos</title>
+    <link rel="stylesheet" href="../../CSS/exe08.css">
 </head>
-<body>
-    <h2>Cadastro de produtos</h2><br><br>
+<body style="background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(11,20,88,1) 13%, rgba(23,112,45,1) 100%, rgba(128,24,110,1) 100%, rgba(0,212,255,1) 100%);">
+    <h2 style="text-align: center; border: 2px solid; background-color: antiquewhite;">Cadastro de produtos</h2><br><br>
 
-    <label for="marca" required>Marca:</label>
+<form class="produto" style="text-align: center;">
+    <label for="marca" required>Marca:</label><br>
+    <input type="text"><br><Br>
+
+    <label for="processador" required>Processador:</label><br>
     <input type="text"><br><br>
 
-    <label for="processador" required>Processador:</label>
-    <input type="text"><br><br>
-
-    <label for="memoria_ram">Memória Ram:</label>
+    <label for="memoria_ram">Memória Ram:</label><br>
     <select required>
         <option>1 GB</option>
         <option>2 GB</option>
@@ -28,7 +31,7 @@
         <option>512 GB</option>
     </select><br><br>
 
-    <label for="armazenamento">Armazenamento:</label>
+    <label for="armazenamento">Armazenamento:</label><br>
     <select required>
         <option>32 GB</option>
         <option>64 GB</option>
@@ -39,22 +42,23 @@
         <option>2 TB</option>
     </select><br><br>
 
-    <label for="preço" required>Preço:</label>
+    <label for="preço" required>Preço:</label><br>
     <input type="number" placeholder="R$"><BR><BR>
 
-    <label for="tela" required>Tela em polegadas:</label>
+    <label for="tela" required>Tela em polegadas:</label><br>
     <input type="number" placeholder="ex: 23.8"><BR><BR>
 
-    <label for="sistema_operacional" required>Sistema Operacional:</label>
+    <label for="sistema_operacional" required>Sistema Operacional:</label><br>
     <input type="text"><BR><BR>
 
-    <label for="modelo">Modelo:</label>
+    <label for="modelo">Modelo:</label><br>
     <input type="text"><BR><BR>
 
-    <label for="comprar">Comprar</label>
+    <label for="comprar">Comprar</label><br>
     <input type="url" placeholder="https:/exemplo.com.br"><BR><BR><BR>
 
     <a href="../Exe07.html" style="padding: 8px 12px; background-color: #f0f0f0; border: 2px solid #524242; border-radius: 5px;">Cadastrar</a>
 
+</form>
 </body>
 </html>
