--- a/ATIVIDADES/exe08_formulários/cad_usuário.html
+++ b/ATIVIDADES/exe08_formulários/cad_usuário.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
+    <link rel="stylesheet" href="../../CSS/exe08.css">
 </head>
-<body>
-    <h2>Cadastro de usuário</h2>
-    <form>
+<body style="background: rgb(36,26,0);
+background: linear-gradient(90deg, rgba(36,26,0,1) 0%, rgba(11,20,88,1) 26%, rgba(65,120,125,1) 61%, rgba(255,255,255,1) 100%, rgba(128,24,110,1) 100%, rgba(0,212,255,1) 100%);">
+    <h2 style="text-align: center; background-color: beige;">Cadastro de usuário</h2>
+    <form class="usuario" style="text-align: left; padding-left: 20px;"><Br>
         <label for="nome">Nome Completo:</label>
         <input type="text" required> <br><br>
 
@@ -42,18 +44,47 @@
         <label for="Cidade" required>Cidade:</label>
         <input type="text"><br><br>  
         
-        <label for="Estado" required>Estado:</label>
-        <input type="text"><br><br>
+        <label for="estado" required>Estado:</label>
+        <select name="estado">
+            <option selected="" value="">Selecione o Estado (UF)</option>
+            <option value="Acre">Acre</option>
+            <option value="Alagoas">Alagoas</option>
+            <option value="Amapá">Amapá</option>
+            <option value="Amazonas">Amazonas</option>
+            <option value="Bahia">Bahia</option>
+            <option value="Ceará">Ceará</option>
+            <option value="Distrito Federal">Distrito Federal</option>
+            <option value="Espírito Santo">Espírito Santo</option>
+            <option value="Goiás">Goiás</option>
+            <option value="Maranhão">Maranhão</option>
+            <option value="Mato Grosso">Mato Grosso</option>
+            <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+            <option value="Minas Gerais">Minas Gerais</option>
+            <option value="Pará">Pará</option>
+            <option value="Paraíba">Paraíba</option>
+            <option value="Paraná">Paraná</option>
+            <option value="Pernambuco">Pernambuco</option>
+            <option value="Piauí">Piauí</option>
+            <option value="Rio de Janeiro">Rio de Janeiro</option>
+            <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+            <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+            <option value="Rondônia">Rondônia</option>
+            <option value="Roraima">Roraima</option>
+            <option value="Santa Catarina">Santa Catarina</option>
+            <option value="São Paulo">São Paulo</option>
+            <option value="Sergipe">Sergipe</option>
+            <option value="Tocantins">Tocantins</option>
+            </select><BR><BR>
 
         <label for="senha" required>Senha:</label>
         <input type="password"><br><br>
 
         <label for="confirmar_senha" required>Confirmar senha:</label>
-        <input type="password"><br><br>
+        <input type="password"><br><br><br>
 
-        <a href="./login.html" style="padding: 8px 12px; background-color: #f0f0f0; border: 2px solid #524242; border-radius: 5px;">Cadastrar</a> 
+        <a href="./login.html" style= "padding: 8px 12px; background-color: #f0f0f0; border: 2px solid #524242; border-radius: 5px;">Cadastrar</a> 
 
-        <a href="./index.html" style="padding: 8px 12px; background-color: #f0f0f0; border: 2px solid #524242; border-radius: 5px;">Cancelar</a><br><br>
+        <a href="./index.html" style="padding:  8px 12px; background-color: #f0f0f0; border: 2px solid #524242; border-radius: 5px;">Cancelar</a><br><br>
     </form>
 </body>
 </html>
