--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Página Principal</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
-<body>
-    <h1>Técnico em desenvolvimento de Sistemas SESI/SENAI</h1>
-    <h3>Página de conteúdos e Atividades Sesi/Senai</h3>
-    <img src="" alt="">
-    <img src="./IMG/sesi-logo.jpg"><p>
+<body style="text-align: center; background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(227,82,82,1) 26%, rgba(217,47,47,1) 51%, rgba(222,84,84,1) 74%, rgba(133,133,133,1) 100%);"><BR>
+    <h1 style="text-align: center; color: aliceblue;">Técnico em desenvolvimento de Sistemas SESI/SENAI</h1><br><Br>
+    <h3 style="text-align: center; color: aliceblue;">Página de conteúdos e Atividades Sesi/Senai</h3><Br>
+    <img alt="">
+    <img src="./IMG/sesi-logo.jpg"><p><BR><Br>
 
-    <a href="./ATIVIDADES/atividades.html">Atividades</a>
-    <a href="./teoria.html">teoria</a>
+    <a href="./ATIVIDADES/atividades.html" style="border: 2px solid #252424; padding: 8px; border-radius: 20px; background-color: blanchedalmond;">Atividades</a><br><br><br>
+    <a href="./teoria.html" style="border: 2px solid #252424; padding: 8px; border-radius: 20px; background-color: blanchedalmond;">teoria</a><br><br>
 </body>
 </html>
