--- a/ATIVIDADES/atividades.html
+++ b/ATIVIDADES/atividades.html
@@ -20,6 +20,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(193,184,184,1) 5
     <a href="../ATIVIDADES/Exe06.html">EXERCICIO-06 </a><br><BR>
     <a href="../ATIVIDADES/Exe07.html">EXERCICIO-07 </a><br><BR>
     <a href="../ATIVIDADES/exe08_formulários/index.html">EXERCICIO-08 </a>
+    <a href="../ATIVIDADES/atividade09/index.html">EXERCICIO-09 </a>
 </form>
 </body>
 </html>
