teoria flexbox e exercicio 09

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(227,82,82,1) 26%
     <img src="./IMG/sesi-logo.jpg"><p><BR><Br>
 
     <a href="./ATIVIDADES/atividades.html" style="border: 2px solid #252424; padding: 8px; border-radius: 20px; background-color: blanchedalmond;">Atividades</a><br><br><br>
+    <a href="../teoria_flexbox.html">Teoria FlexBox</a>
     <a href="./teoria.html" style="border: 2px solid #252424; padding: 8px; border-radius: 20px; background-color: blanchedalmond;">teoria</a><br><br>
 </body>
 </html>
