--- a/ATIVIDADES/atividade09/index.html
+++ b/ATIVIDADES/atividade09/index.html
@@ -7,17 +7,52 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="cabecalho">
+        <nav class="menu">
             <span class="logo">CafeShop</span>
             <ul class="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">Receitas</a></li>
-                <li><a href="">Novidades</a></li>
-                <li><a href="">Melhor avaliados</a></li>
-            </ul>
-            <a href="">Acessar</a>
+                <a  href="">Home</a>
+                <a  href="">Receitas</a>    
+                <a  href="">Novidades</a>   
+                <a  href="">Melhor avaliados</a> 
+            </ul> 
+            <a class="acessar" href="">Acessar</a>   
         </nav>
     </header>
+
+    <main>
+        <figure class="banner-cafe">
+            <img src="./img/cafe.jpg" alt="">
+        </figure>
+
+        <br>
+        <section class="banner-novidades">
+            <header class="banner-conteudo">
+                <span>Novidades</span>
+                <h1>Encontre a receita perfeita!</h1>
+                <hr>
+                <h2>Explore dezenas de receitas de café</h2>
+            </header>
+
+            <div class="banner-imagens">
+                <figure><img src="./img/cafe-1.png" alt=""></figure>
+                <figure><img src="./img/cafe-2.png" alt=""></figure>
+                <figure><img src="./img/cafe-3.png" alt=""></figure>
+                <figure><img src="./img/cafe-4.png" alt=""></figure>
+                <figure><img src="./img/cafe-5.png" alt=""></figure>
+                <figure><img src="./img/cafe-6.png" alt=""></figure>
+                <figure><img src="./img/cafe-7.png" alt=""></figure>
+                <figure><img src="./img/cafe-8.png" alt=""></figure>
+                <figure><img src="./img/cafe-9.png" alt=""></figure>
+                <figure><img src="./img/cafe-10.png" alt=""></figure>
+                <figure><img src="./img/cafe-11.png" alt=""></figure>
+                <figure><img src="./img/cafe-12.png" alt=""></figure>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+    </footer>
 </body>
 </html>
