--- a/ATIVIDADES/exe10_starbucks/index.html
+++ b/ATIVIDADES/exe10_starbucks/index.html
@@ -30,26 +30,78 @@
         <img class="banner" src="./img/banner_1657816974_desktop.jpg" alt="">
         <br>
         <div class="bloco1">
-            <div class="textos"><h3>Uma surpresa refrescante para você</h3></div><br>
-            <span>Conheça nossa linha de Cold Brew e Refreshers™</span>
+            <div class="textos"><h3>Uma surpresa refrescante para você</h3>
+            <span>Conheça nossa linha de Cold Brew e Refreshers™</span></div>
             <div><img class="img_copo" src="./img/15170_SBUX_REW_BANNERS3MAIO-02.png" alt=""></div>
         </div>
 
         <!-- Bloco 2 -->
         <br>
         <div class="bloco1">
-            <div class="textos"><h3>Uma surpresa refrescante para você</h3></div><br>
-            <button>Saiba Mais</button>
             <div><img class="img_copo" src="./img/15170_SBUX_REW_BANNERS3MAIO-02.png" alt=""></div>
+            <div class="textos"><h3>Coisas boas estão acontecendo</h3>
+                <span>Descubra como estamos melhorando o mundo, um café de cada vez</span><br>
+            <button>Saiba Mais</button></div>
+            
         </div>
 
         <!-- Bloco 3 -->
         <br>
         <div class="bloco1">
-            <div class="textos"><h3>Uma surpresa refrescante para você</h3></div><br>
-            <button>Saiba Mais</button>
+            <div class="textos"><h3>Histórias e notícias Starbucks</h3>
+                <span>Leia as últimas notícias e histórias de nossa empresa</span>
+            <button>Saiba Mais</button></div>
             <div><img class="img_copo" src="./img/15170_SBUX_REW_BANNERS3MAIO-02.png" alt=""></div>
         </div>
     </main>
+<br>
+    <hr>
+    <footer>
+        <div class="rodape">
+        <div class="rodape-section">
+            <h3>Sobre nós</h3>
+            <ul>
+                <li><a href="">Nossa Empresa</a></li>
+                <li><a href="">Nosso Café</a></li>
+                <li><a href="">Atendimento ao cliente</a></li>
+                <li><a href="">Compliance e Privacidade</a></li>
+                <li><a href="">Código de conduta e ética SouthRock</a></li>
+            </ul>
+        </div>
+
+        <div class="rodape-section">
+            <h3>Carreira</h3>
+            <ul><li><a href="">Central de Carreiras</a></li></ul>
+        </div>
+
+        <div class="rodape-section">
+            <h3>Impacto Social</h3>
+            <ul>
+                <li><a href="">Comunidade</a></li>
+                <li><a href="">Meio ambiente</a></li>
+                <li><a href="">Fornecimento Ético</a></li>
+                <li><a href="">Histórias Starbucks</a></li>
+            </ul>
+        </div>
+
+        <div class="rodape-section">
+            <h3>Starbucks Rewards</h3>
+            <ul>
+                <li><a href="">Termos & Condições do Starbucks Card</a></li>
+                <li><a href="">Termos & Condições do Starbucks Rewards</a></li>
+                <li><a href="">Termos & Condições do Gift Card</a></li>
+                <li><a href="">Termos & Condições de Promoções Starbucks</a></li>
+                <li><a href="">Termos & Condições Peça e Pague pelo Celular e Retire na Loja</a></li>
+                    
+            </ul>
+        </div>
+
+        <div>
+            <img class="img-rodape" src="./img/sb-historias-logo.svg" alt="">
+        </div>
+
+    </div>
+
+    </footer>
 </body>
 </html>
