--- a/ATIVIDADES/atividade09_cafeshop/index.html
+++ b/ATIVIDADES/atividade09_cafeshop/index.html
@@ -12,9 +12,9 @@
         <span class="logo">CafeShop</span>
         <ul class="menu">
           <a href="">Home</a>
-          <a href="">Receitas</a>
+          <a href="#receitas">Receitas</a>
           <a href="">Novidades</a>
-          <a href="">Melhor avaliados</a>
+          <a href="./avaliados.html">Melhor avaliados</a>
           <a href="./mapa.html">Onde nós estamos</a>
         </ul>
         <a class="acessar" href="">Acessar</a>
@@ -53,7 +53,8 @@
         </section>
       </div>
 
-      <header class="receitas">
+      <header class="receitas"  id="receitas">
+
         <span>receitas</span>
         <h2>Confira as últimas receitas</h2>
         <p>dê uma olhada nas receitas mais amadas.</p>
