--- a/ATIVIDADES/atividades.html
+++ b/ATIVIDADES/atividades.html
@@ -11,17 +11,18 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(193,184,184,1) 5
     <h3 style="text-align: center; color: rgb(39, 28, 13);"> Atividades desenvolvidas</h3><BR>
 
     <form class="fundoatv"><BR>
-    <a href="../ATIVIDADES/exercicio-01.html">EXERCICIO-01</a><BR>
+    <a href="../ATIVIDADES/exercicio-01.html">EXERCICIO 01</a><BR>
     <BR>
-    <a href="../ATIVIDADES/exercicio-02.html">EXERCICIO-02</a><BR>
+    <a href="../ATIVIDADES/exercicio-02.html">EXERCICIO 02</a><BR>
     <br>
-    <a href="../ATIVIDADES/exercicio-03.html">EXERCICIO-03</a><br><BR>
-    <a href="../ATIVIDADES/exe05-receitas/index.html">EXERCICIO-05 - Receitas</a><br><BR>
-    <a href="../ATIVIDADES/Exe06.html">EXERCICIO-06 </a><br><BR>
-    <a href="../ATIVIDADES/Exe07.html">EXERCICIO-07 </a><br><BR>
-    <a href="../ATIVIDADES/exe08_formulários/index.html">EXERCICIO-08 </a><br><br>
-    <a href="../ATIVIDADES/atividade09_cafeshop/index.html">EXERCICIO-09 </a><br><br>
-    <a href="../ATIVIDADES/exe10_starbucks/index.html">EXERCICIO-10 </a>
+    <a href="../ATIVIDADES/exercicio-03.html">EXERCICIO 03</a><br><BR>
+    <a href="../ATIVIDADES/exe05-receitas/index.html">EXERCICIO 05 - Receitas</a><br><BR>
+    <a href="../ATIVIDADES/Exe06.html">EXERCICIO 06 </a><br><BR>
+    <a href="../ATIVIDADES/Exe07.html">EXERCICIO 07 </a><br><BR>
+    <a href="../ATIVIDADES/exe08_formulários/index.html">EXERCICIO 08 </a><br><br>
+    <a href="../ATIVIDADES/atividade09_cafeshop/index.html">EXERCICIO 09 </a><br><br>
+    <a href="../ATIVIDADES/exe10_starbucks/index.html">EXERCICIO 10 </a><br><br>
+    <a href="../ATIVIDADES/exe11_Docuras_da_Vóvó/index.html">EXERCICIO 11 </a>
 </form>
 </body>
 </html>
