atividade 12 / Festival de música

--- a/index.html
+++ b/index.html
@@ -28,17 +28,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#teoria">Teoria</a>
+                <a class="nav-link active" aria-current="page" href="/HTML/teoria.html">Teoria</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#atividades">Atividades</a>
+                <a class="nav-link" href="/HTML/ATIVIDADES/atividades.html">Atividades</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link" href="#flexbox">FlexBox</a>
-              </li> 
-
-              <li class="nav-item">
-                <a class="nav-link" href="#exercicios">Exercícios</a>
+                <a class="nav-link" href="/HTML/teoria_flexbox.html">FlexBox</a>
               </li>  
           </div>
         </div>
@@ -83,7 +79,7 @@
         <div class="card-body">
           <h5 class="card-title">FLEXBOX</h5>
           <p class="card-text">Um  lugar onde você encontrará todas as atividades e exercícios que foram realizados e estudados.</p>
-          <a href="../teoria_flexbox.html" class="btn btn-danger">VISITAR</a>
+          <a href="./teoria_flexbox.html" class="btn btn-danger">VISITAR</a>
         </div>
       </div>
     </section>
@@ -107,7 +103,7 @@
             <img src="./IMG/image.png" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">EXERCÍCIO 10</h5>
-              <p class="card-text">Inspirado na página do Starbucks, feito no início do aprendizado com BoodStrap</p>
+              <p class="card-text">Inspirado na página do Starbucks, feito no início do aprendizado com BootStrap</p>
               <a href="./ATIVIDADES/exe10_starbucks/index.html" class="btn btn-danger">VISITAR</a>
             </div>
           </div>
@@ -116,7 +112,7 @@
             <img src="./IMG/bobesponja.png" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">EXERCÍCIO 11</h5>
-              <p class="card-text">A página 'Doçuras da vovó' foi feita por boodStrap. Foi executado no pensamento de uma página de apresentão de receitas</p>
+              <p class="card-text">A página 'Doçuras da vovó' foi feita por bootStrap. Foi executado no pensamento de uma página de apresentação de receitas</p>
               <a href="./ATIVIDADES/exe11_Docuras_da_Vóvó/index.html" class="btn btn-danger">VISITAR</a>
             </div>
           </div>
