--- a/ATIVIDADES/atividades.html
+++ b/ATIVIDADES/atividades.html
@@ -23,6 +23,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(193,184,184,1) 5
     <a href="../ATIVIDADES/atividade09_cafeshop/index.html">EXERCICIO 09 </a><br><br>
     <a href="../ATIVIDADES/exe10_starbucks/index.html">EXERCICIO 10 </a><br><br>
     <a href="../ATIVIDADES/exe11_Docuras_da_Vóvó/index.html">EXERCICIO 11 </a>
+    <a href="../ATIVIDADES/festival de musica/index.html">EXERCICIO 12 </a>
 </form>
 </body>
 </html>
