--- a/ATIVIDADES/festival de musica/index.html
+++ b/ATIVIDADES/festival de musica/index.html
@@ -176,16 +176,16 @@
             <h5 style="color: antiquewhite">Redes Sociais</h5>
             <ul class="list-unstyled d-flex gap-3">
               <li style="color: antiquewhite">
-                <i class="bi bi-whatsapp"></i><a class="text-dark" href="#"></a>
+                <i class="bi bi-whatsapp"></i><a class="" style="cursor: pointer; color: antiquewhite; text-decoration: none;" href="#">18 990011224</a>
               </li>
               <li style="color: antiquewhite">
-                <i class="bi bi-instagram"></i><a class="text-dark" href="#"></a>
+                <i class="bi bi-instagram"></i><a class="" style="cursor: pointer; color: antiquewhite; text-decoration: none;" href="#">Festival_Oficial</a>
               </li>
               <li style="color: antiquewhite">
-                <i class="bi bi-facebook"></i><a class="text-dark" href="#"></a>
+                <i class="bi bi-facebook"></i><a class=""  style="cursor: pointer; color: antiquewhite; text-decoration: none;" href="#">Festival_0ficial</a>
               </li>
               <li style="color: antiquewhite">
-                <i class="bi bi-twitter"></i><a class="text-dark" href="#"></a>
+                <i class="bi bi-twitter"></i><a class="" style="cursor: pointer; color: antiquewhite; text-decoration: none;" href="#">Festival_0ficial_</a>
               </li>
             </ul>
           </div>
