--- a/javaScript/02 - basquete/placarEletronico.html
+++ b/javaScript/02 - basquete/placarEletronico.html
@@ -3,34 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Placar Eletronico</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <title>Placar Eletrônico</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #d0d3d6; 
+        }
+        header {
+            text-align: center;
+            background-image: linear-gradient(to left, #007bff, #4a4455); 
+        }
+        h1 {
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 30px;
+        }
+        .score {
+            font-size: 4rem; 
+            color: #1d201e;
+        }
+        .btn-primary {
+            margin: 0.2rem;
+            font-size: 1.2rem;
+        }
+        .btn-secondary{
+            margin: 0.2rem;
+            font-size: 1.8rem;
+        }
+        .btn-danger {
+            margin: 0.2rem;
+            font-size: 2.4rem;
+        }
+        .divider {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #3077b6;
+        }
+    </style>
 </head>
 <body>
-    <header class="bg-primary text-white py-4 mb-4">
-        <h1>Placar Eletronico</h1>
+    <header class="py-4 text-white mb-4">
+        <h1>PLACAR ELETRÔNICO</h1>
     </header>
 
     <main class="container">
-        <!-- pontuação simples -->
-         <section class="row mb-4 justify-content-center">
-            <div class="col-md-4 text-center">
-                <h3>Time 1</h3>
-                <p class="fs-2 fw-bold" id="time1">0</p>
-                <button id="pt1" class="btn btn-primary" onclick="Pontos1()">+</button>
+        <section class="row mb-5">
+            <!-- Time 1 -->
+            <div class="col-md-5 text-center p-3 border bg-white rounded shadow-sm">
+                <h3 class="text-third">TIME 1</h3>
+                <p class="score" id="time1">0</p>
+                <button class="btn btn-primary" onclick="Pontos1()">+1</button>
+                <button class="btn btn-secondary" onclick="Pontos2()">+2</button>
+                <button class="btn btn-danger" onclick="Pontos3()">+3</button>
             </div>
 
-            <div class="col-md-2 align-items-center justify-content-center">
-                <p>X</p>
+            
+            <div class="col-md-2 text-center align-self-center">
+                <p class="divider">X</p>
+                <button id="resetar" class="btn btn-primary" onclick="resetar()">Resetar</button>
             </div>
 
-            <div class="col-md-4 text-center">
-                <h3>Time 2</h3>
-                <p class="fs-2 fw-bold" id="time2">0</p>
-                <button id="pt2" class="btn btn-primary" onclick="Pontos2()">+</button>
+            <!-- Time 2 -->
+            <div class="col-md-5 text-center p-3 border bg-white rounded shadow-sm">
+                <h3 class="text-third">TIME 2</h3>
+                <p class="score" id="time2">0</p>
+                <button class="btn btn-primary" onclick="Pontos1Time2()">+1</button>
+                <button class="btn btn-secondary" onclick="Pontos2Time2()">+2</button>
+                <button class="btn btn-danger" onclick="Pontos3Time2()">+3</button>
             </div>
-         </section>
+        </section>
     </main>
 
     <script src="./placarEletronico.js"></script>
