--- a/javaScript/01 - Trocando Cor/trocandoCores.html
+++ b/javaScript/01 - Trocando Cor/trocandoCores.html
@@ -23,7 +23,7 @@
          <button class="btn btn-primary" onclick="aplicarCor()">Aplicar Cor</button>
          <button class="btn btn-danger" onclick="qualquer()">Gerando cor</button>
          <button class="btn btn-dark" onclick="dark()">Modo Escuro</button>
-         <button class="btn btn-light" onclick="white()">Modo Escuro</button>
+         <button class="btn btn-light" onclick="white()">Modo Claro</button>
     </div>
     <script src="./trocandoCores.js"></script>
 </body>
